--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "main": "src/index.js",
   "dependencies": {
     "framer-motion": "1.10.3",
+    "grommet": "2.13.0",
+    "grommet-icons": "4.4.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-scripts": "3.0.1"
